# lightsoffsolver

./: .gitignore  ABSTRACT.md  ARTICLE.md  CMakeLists.txt  Makefile  README.md  lightsoffsolver
rust/: Cargo.toml
rust/src/: bitalg.rs  bitmat.rs  bitvec.rs  lib.rs  ligsol.rs  main.rs
src/: boolarray.c  boolarray.h  boolgauss.c  boolgauss.h  boolmatrix.c  boolmatrix.h  lightsoffsolver.c  lightsoffsolver.h  main.c  progress.c  progress.h
vala/: boolarray.vala  boolgauss.vala  boolmatrix.vala  build.sh  input100.txt  input150.txt  input200.txt  input50.txt  lightsoffsolver  lightsoffsolver.vala  main.vala  run.sh
